# 6502.vers2

./: .gitignore  CMakeLists.txt  README  main.cpp
6502_emulator/include/Instructions/: InstructionSet.h
6502_emulator/include/Memory/: Bus.h
6502_emulator/include/common/: CPUConfigs.h  types.h
6502_emulator/include/cpu/: CPU.h
6502_emulator/src/: main.cpp
tests/: CMakeLists.txt  tests.cpp
